<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">
    <include android:id="@+id/toolbar"
        layout="@layout/toolbar_all"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/black_40"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:id="@+id/llShopName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="1"
            android:layout_margin="@dimen/margin_7">
            <TextView
                android:padding="@dimen/margin_7"
                android:layout_weight="0.9"
                android:id="@+id/tvShopName"
                android:layout_width="0dp"
                android:textSize="@dimen/margin_14"
                android:layout_height="wrap_content"
                android:text="@string/item_shop_name" />
            <ImageView
                android:layout_marginTop="@dimen/margin_4"
                android:padding="@dimen/margin_5"
                app:srcCompat="@drawable/ic_star_black_24dp"
                android:layout_weight="0.07"
                android:id="@+id/ivStar"
                android:layout_width="0dp"
                android:layout_height="24dp" />
            <TextView
                android:padding="@dimen/margin_6"
                android:layout_weight="0.03"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/item_rate_value"/>
        </LinearLayout>
        <View
            android:layout_below="@+id/llShopName"
            android:id="@+id/vShopName"
            android:layout_width="match_parent"
            android:layout_height="9dp"
            android:alpha="0.10"
            android:background="@color/black_87"/>
        <LinearLayout
            android:layout_below="@+id/vShopName"
            android:id="@+id/rlContent"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:orientation="vertical">
        </LinearLayout>
        <View
            android:layout_below="@+id/rlContent"
            android:id="@+id/vMid"
            android:layout_width="match_parent"
            android:layout_height="9dp"
            android:alpha="0.10"
            android:background="@color/black_87"/>

        <LinearLayout
            android:layout_below="@+id/vMid"
            android:id="@+id/llMidContent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:textStyle="bold"
                android:background="@drawable/border_color_green"
                android:padding="@dimen/margin_4"
                android:layout_margin="@dimen/margin_7"
                android:id="@+id/tvPricePercentOff"
                android:gravity="center"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:text="@string/item_percent_off"
                android:textSize="@dimen/margin_10"
                android:textColor="@color/green"/>
            <TextView
                android:padding="@dimen/margin_4"
                android:layout_margin="@dimen/margin_7"
                android:id="@+id/tvContentName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/item_name"
                android:textSize="@dimen/margin_16"
                android:textColor="@color/black_84"/>
            <LinearLayout
                android:id="@+id/llPriceAndAdd"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:weightSum="1">
                <TextView
                    android:textSize="@dimen/margin_12"
                    android:padding="@dimen/margin_4"
                    android:layout_margin="@dimen/margin_7"
                    android:textColor="@color/black_84"
                    android:layout_weight="0.84"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/item_price"/>
                <TextView
                    android:textStyle="bold"
                    android:background="@drawable/border_color_orange"
                    android:textColor="@color/orange"
                    android:padding="@dimen/margin_4"
                    android:layout_margin="@dimen/margin_7"
                    android:layout_weight="0.16"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/item_add"
                    android:textSize="@dimen/margin_14"
                    android:gravity="center_horizontal"/>
            </LinearLayout>
        </LinearLayout>
        <View
            android:layout_below="@+id/llMidContent"
            android:id="@+id/vQuantity"
            android:layout_width="match_parent"
            android:layout_height="9dp"
            android:alpha="0.10"
            android:background="@color/black_87"/>
        <LinearLayout
            android:layout_below="@+id/vQuantity"
            android:id="@+id/llQuantity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:textColor="@color/black_84"
                android:padding="@dimen/margin_4"
                android:layout_margin="@dimen/margin_7"
                android:id="@+id/tvQuantity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/item_quantity"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="1">
                <TextView
                    android:background="@drawable/border_color_gray"
                    android:layout_margin="@dimen/margin_7"
                    android:padding="@dimen/margin_4"
                    android:id="@+id/tvKg"
                    android:layout_weight="0.25"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/item_kg"
                    android:gravity="center"/>
                <TextView
                    android:background="@drawable/border_color_gray"
                    android:layout_margin="@dimen/margin_7"
                    android:padding="@dimen/margin_4"
                    android:gravity="center"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.25"
                    android:text="@string/item_750g"/>
                <TextView
                    android:background="@drawable/border_color_gray"
                    android:layout_margin="@dimen/margin_7"
                    android:padding="@dimen/margin_4"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.25"
                    android:text="@string/item_500g"
                    android:gravity="center"/>
                <TextView
                    android:background="@drawable/border_color_gray"
                    android:layout_margin="@dimen/margin_7"
                    android:padding="@dimen/margin_4"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.25"
                    android:text="@string/item_250g"
                    android:gravity="center"/>
            </LinearLayout>
        </LinearLayout>
        <View
            android:layout_below="@+id/llQuantity"
            android:id="@+id/vDescription"
            android:layout_width="match_parent"
            android:layout_height="9dp"
            android:alpha="0.10"
            android:background="@color/black_87"/>
        <RelativeLayout
            android:layout_below="@+id/vDescription"
            android:id="@+id/rlDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_10">

            <com.prateek.demovideotap.utility.TextViewRoboto
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/key_feature"
                android:textAllCaps="true"
                android:textColor="@color/black_84"
                android:textSize="@dimen/text_size_12"
                android:layout_marginTop="@dimen/margin_4"
                app:font="medium" />

            <android.support.v7.widget.AppCompatImageView
                android:id="@+id/ivExpandDescription"
                android:layout_width="22dp"
                android:layout_height="22dp"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:alpha="0.54"
                android:paddingTop="5dp"
                android:paddingBottom="4dp"
                android:background="@drawable/circle_black_ring_idp"
                app:srcCompat="@drawable/ic_angle_arrow_down" />
        </RelativeLayout>
     <!--   <ExpandableListView
            android:layout_margin="@dimen/margin_7"
            android:layout_below="@+id/vDescription"
            android:id="@+id/elvDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"></ExpandableListView>-->
    </RelativeLayout>

</LinearLayout>